<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">\u5b89\u5fbd\u7701\u56fe\u4e66\u9986\u9884\u7ea6</string>
    <string name="loading">\u52a0\u8f7d\u4e2d\u2026</string>
    <string name="retry">\u91cd\u8bd5</string>
    <string name="refresh">\u5237\u65b0</string>
    <string name="cancel">\u53d6\u6d88</string>
    <string name="confirm">\u786e\u5b9a</string>
    <string name="unknown_value">\u672a\u77e5</string>
...
    <string name="slot_unavailable">\u8be5\u65f6\u6bb5\u5df2\u4e0d\u53ef\u9884\u7ea6\uff0c\u8bf7\u91cd\u65b0\u9009\u62e9</string>
    <string name="sms_code_invalid">\u8bf7\u8f93\u5165 4 \u81f3 6 \u4f4d\u77ed\u4fe1\u9a8c\u8bc1\u7801</string>
    <string name="sms_code_required">\u8bf7\u8f93\u5165\u77ed\u4fe1\u9a8c\u8bc1\u7801</string>
    <string name="sms_code_sent">\u77ed\u4fe1\u9a8c\u8bc1\u7801\u5df2\u53d1\u9001</string>
    <string name="sms_resend_countdown">%1$d \u79d2\u540e\u53ef\u91cd\u65b0\u53d1\u9001</string>
    <string name="venue_missing">\u573a\u9986\u4fe1\u606f\u7f3a\u5931\uff0c\u65e0\u6cd5\u63d0\u4ea4\u9884\u7ea6</string>
    <string name="automation_settings_title">\u5176\u5b83\u8bbe\u7f6e</string>
    <string name="auto_booking_title">\u81ea\u52a8\u9884\u7ea6</string>
    <string name="auto_booking_description">\u5f00\u542f\u540e\u4f1a\u81ea\u52a8\u5c1d\u8bd5\u9884\u7ea6\u540e\u5929\u7684\u6240\u9009\u65f6\u6bb5\uff0c\u6210\u529f\u540e\u53ef\u9009\u62e9\u6dfb\u52a0\u65e5\u5386\u63d0\u9192\u3002</string>
    <string name="auto_booking_target_missing">\u5c1a\u672a\u8bbe\u7f6e\u7a7a\u95f4\u548c\u65f6\u6bb5</string>
    <string name="auto_booking_target_value">%1$s \u00b7 %2$s\u2013%3$s</string>
    <string name="auto_booking_target_hint">\u5728\u7a7a\u95f4\u8be6\u60c5\u4e2d\u9009\u62e9\u9700\u8981\u81ea\u52a8\u9884\u7ea6\u7684\u65f6\u6bb5\u3002</string>
    <string name="configure_auto_booking">\u8bbe\u4e3a\u81ea\u52a8\u9884\u7ea6\u65f6\u6bb5</string>
...
    <string name="automation_logs">\u81ea\u52a8\u5316\u65e5\u5fd7</string>
    <string name="clear_logs">\u6e05\u7a7a\u65e5\u5fd7</string>
    <string name="automation_logs_empty">\u6682\u65e0\u81ea\u52a8\u5316\u65e5\u5fd7</string>
    <string name="automation_logs_notice">\u4ec5\u4fdd\u7559\u5f53\u524d\u8fdb\u7a0b\u6700\u8fd1 %1$d \u6761\u65e5\u5fd7\uff0c\u8d85\u51fa\u540e\u81ea\u52a8\u79fb\u9664\u6700\u65e7\u8bb0\u5f55\uff1b\u8fdb\u7a0b\u7ed3\u675f\u540e\u4f1a\u6e05\u7a7a\u3002</string>
    <string name="app_update_check">\u68c0\u67e5\u66f4\u65b0</string>
    <string name="app_update_checking">\u6b63\u5728\u68c0\u67e5\u66f4\u65b0\u2026</string>
    <string name="app_update_current_version">\u5f53\u524d\u7248\u672c\u53f7 %1$s</string>
    <string name="advanced_settings_clicks_remaining">\u518d\u70b9\u51fb%1$d\u6b21\u5373\u53ef\u5f00\u542f\u9ad8\u7ea7\u8bbe\u7f6e</string>
    <string name="advanced_settings_enabled">\u9ad8\u7ea7\u8bbe\u7f6e\u5df2\u5f00\u542f</string>
    <string name="app_update_available_title">\u53d1\u73b0\u65b0\u7248\u672c %1$s</string>
    <string name="app_update_size">\u5b89\u88c5\u5305\u5927\u5c0f\uff1a%1$s</string>
    <string name="app_update_notes_empty">\u6682\u65e0\u66f4\u65b0\u8bf4\u660e</string>
    <string name="app_update_download">\u7acb\u5373\u66f4\u65b0</string>
    <string name="app_update_later">\u7a0d\u540e</string>
    <string name="app_update_downloading">\u6b63\u5728\u4e0b\u8f7d\u66f4\u65b0\u2026</string>
...
